syntax = "proto3";
import "google/protobuf/timestamp.proto";

package fractalengine;

option go_package = "pkg/protocol";

// This is what gets written to the OP_RETURN on the L1
message OnChainInvoiceMessage {
    int32 version = 1;
    string sell_offer_address = 2;
    string invoice_hash = 3;
    string mint_hash = 4;
    int32 quantity = 5;
}

// This is what gets gossiped + stored in the gossip mempool + confirmed_transactions
message InvoiceMessageEnvelope {
    int32 type = 1;
    int32 version = 2;
    InvoiceMessage payload = 3;
    string public_key = 4;
    string signature = 5;
}


message InvoicePayload {
    string payment_address = 1;
    string buy_offer_offerer_address = 2;
    string buy_offer_hash = 3;
    string buy_offer_mint_hash = 4;
    int32 buy_offer_quantity = 5;
    int32 buy_offer_price = 6;
    string sell_offer_address = 7;
}

message InvoiceMessage {
    string id = 1;
    string hash = 2;
    InvoicePayload payload = 3;
    google.protobuf.Timestamp created_at = 4;
}

